[gd_scene load_steps=5 format=3 uid="uid://ct4uy8junty6s"]

[ext_resource type="Script" path="res://Levels/level_selection/World_Select.gd" id="1_0yno5"]
[ext_resource type="PackedScene" uid="uid://dm7ht8l2fnyl2" path="res://Levels/level_selection/world_icon.tscn" id="1_5ac1w"]
[ext_resource type="Texture2D" path="res://Art/UI/blank-sky.png" id="2_75kf8"]
[ext_resource type="PackedScene" uid="uid://dlagwqio44fol" path="res://Levels/level_selection/player_icon.tscn" id="3_diho5"]

[node name="WorldSelect" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_0yno5")

[node name="Blank-sky" type="Sprite2D" parent="."]
modulate = Color(0.65098, 0.65098, 0.65098, 1)
position = Vector2(291, 133)
scale = Vector2(0.238515, 0.231154)
texture = ExtResource("2_75kf8")

[node name="WorldIcon" parent="." instance=ExtResource("1_5ac1w")]
offset_left = 4.0
offset_top = 128.0
offset_right = 68.0
offset_bottom = 168.0

[node name="WorldIcon2" parent="." instance=ExtResource("1_5ac1w")]
offset_left = 71.0
offset_top = 30.0
offset_right = 135.0
offset_bottom = 70.0
world_index = 2

[node name="WorldIcon3" parent="." instance=ExtResource("1_5ac1w")]
offset_left = 137.0
offset_top = 123.0
offset_right = 201.0
offset_bottom = 163.0
world_index = 3

[node name="WorldIcon4" parent="." instance=ExtResource("1_5ac1w")]
offset_left = 204.0
offset_top = 29.0
offset_right = 268.0
offset_bottom = 69.0
world_index = 4

[node name="WorldIcon5" parent="." instance=ExtResource("1_5ac1w")]
offset_left = 260.0
offset_top = 120.0
offset_right = 324.0
offset_bottom = 160.0
world_index = 5

[node name="playerIcon" parent="." instance=ExtResource("3_diho5")]
layout_mode = 0
